Update positioning in style.css
Adjusted positioning of the element by modifying the right property and commenting out the left property.

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,8 @@ html{
     margin: auto;
     /* changes here */
     position:relative;
-    right:10px;
+    /* left:0px; */
+    right:5px;
 }
 
 .intro-page .part1{
