--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,9 @@ html{
     height: 790px;
     margin: auto;
     /* changes here */
-    position:relative;
+    /* position:relative; */
     /* left:0px; */
-    right:5px;
+    /* right:0px; */
 }
 
 .intro-page .part1{
