Update positioning styles in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -123,8 +123,8 @@ html{
     height: 790px;
     margin: auto;
     /* changes here */
-    /* position:relative; */
-    /* left:0px; */
+    position:relative;
+    left:5px;
     /* right:0px; */
 }
 
